fix: localhost:8080 하드코딩 제거 및 환경 변수 사용
- SecurityConfig: CORS 설정을 환경 변수로 변경
- OAuth2Controller: 프론트엔드 URL 환경 변수 사용
- OAuth2ConfigController: 디버깅 로그의 하드코딩 제거
- application.yml: frontend.base-url 환경 변수 사용
- frontend environment.js: fallback을 동적으로 변경